@@ -1,3 +1,8 @@
+2013-05-12  Andy Buckley  <andy.buckley@cern.ch>
+
+	* Adding in-place filling functions for map and vector PDF value
+	containers, on the PDF interface.
+
 2013-05-11  Andy Buckley  <andy.buckley@cern.ch>
 
 	* configure.ac, src/Info.cc: Re-adding yaml-cpp 0.3.x support via
